demo/apple.yml
kind: Pod
apiVersion: v1
metadata:
  name: apple-app
  labels:
    app: apple
    demolabel: demo
#    application: shard-1
  namespace: argocd
spec:
  containers:
    - name: apple-app
      image: hashicorp/http-echo
      args:
        - "-text=applepie"

---

kind: Service
apiVersion: v1
metadata:
  name: apple-service
  namespace: argocd
spec:
  selector:
    app: apple
  ports:
    - port: 5678 # Default port for image
