demo/route-apple.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: apple-ingress
  namespace: argocd
spec:
  host: apple.apps.ocp410.mclabs.us
  port:
    targetPort: 5678
  to:
    kind: Service
    name: apple-service
